# process_omol25

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pre-commit-ignore  .zenodo.json  LICENSE  README.md  api.html  bench_hash.py  genindex.html  index.html  objects.inv  patch_import.py  py-modindex.html  pyproject.toml  release.sh  search.html  test_noble_gas_prefix.json
.github/workflows/: gh-pages.yml  publish-zenodo.yml  publish.yml  test.yml
.jules/: bolt.md
data/: noble_gas_compounds_prefix_full.json  structs_noble_gas_compounds.xyz
docs/: api.rst  conf.py  index.rst
mock_s3_data_restart5/noble_gas_compounds/XeC6F5CN_step9_0_1/: orca.tar.zst
src/lavello_mlips/: __init__.py  aselmdb.py  cli.py  convert_to_lmdb.py  distributions.py  download_omol25.py  phonon_bands.py  plot_train_results.py  process_omol25.py  s3_processor.py  utils.py  verify_processed_omol25.py
src/process_omol25/: __init__.py  cli.py  convert_to_lmdb.py  download_omol25.py  process_omol25.py  verify_processed_omol25.py
test_restart5_serial_out/: structs_test5.xyz
tests/: noble_gas.aselmdb-lock  sample.aselmdb-lock  temp_db.aselmdb-lock  test_cli.py  test_convert_to_lmdb.py  test_download_noble_gas.py  test_download_omol25.py  test_noble_gas_realistic.py  test_omol_noble_gas.py  test_process_omol25.py  test_s3_processor.py  test_verify_metadata.py  test_verify_processed_omol25.py  verify_metadata.py
