[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "process_omol25"
version = "0.1.20"
description = "A Python package for processing omol-25 data using MPI."
readme = "README.md"
authors = [
    { name = "Alin M Elena" }
]
requires-python = ">=3.10"
dependencies = [
    "boto3",
    "pandas",
    "ase",
    "mpi4py",
    "tqdm",
    "zstandard",
    "pyarrow",
    "fastparquet",
    "lmdb",
    "orjson",
    "mace-torch>=0.3.15",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest-cov"
]
docs = [
    "sphinx",
    "sphinx-material"
]

[project.scripts]
process_omol25 = "process_omol25.cli:main"
download_omol25 = "process_omol25.download_omol25:main"
verify_processed_omol25 = "process_omol25.verify_processed_omol25:main"
convert_to_lmdb = "process_omol25.convert_to_lmdb:main"




[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing"
