[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lavello_mlips"
version = "0.1.21"
description = "A Python package for processing omol-25 data using MPI."
readme = "README.md"
authors = [
    { name = "Alin M Elena" }
]
requires-python = ">=3.10"
dependencies = [
    "boto3",
    "pandas",
    "ase",
    "mpi4py",
    "tqdm",
    "zstandard",
    "pyarrow",
    "fastparquet",
    "lmdb",
    "orjson",
    "mace-torch>=0.3.15",
    "janus-core",
    "pyyaml",
    "matplotlib",
    "scikit-learn",
    "altair",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest-cov"
]
docs = [
    "sphinx",
    "sphinx-material"
]

[project.scripts]
lavello_mlips = "lavello_mlips.cli:main"
download_omol25 = "lavello_mlips.download_omol25:main"
verify_processed_omol25 = "lavello_mlips.verify_processed_omol25:main"
convert_to_lmdb = "lavello_mlips.convert_to_lmdb:main"
plot_train_results = "lavello_mlips.plot_train_results:main"




[tool.hatch.build.targets.wheel]
packages = ["src/lavello_mlips"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing"
