[build-system]
requires = ["uv-build>=0.10.12,<0.11"]
build-backend = "uv_build"

[project]
name = "lavello_mlips"
version = "0.2.4"
description = "A Python package for processing omol-25 data using MPI."
readme = "README.md"
authors = [
    { name = "Alin M Elena" }
]
requires-python = ">=3.10"
dependencies = [
    "boto3",
    "pandas",
    "ase",
    "mpi4py",
    "tqdm",
    "zstandard",
    "pyarrow",
    "fastparquet",
    "lmdb",
    "orjson",
    "mace-torch>=0.3.15",
    "janus-core",
    "pyyaml",
    "matplotlib",
    "scikit-learn",
    "altair",
    "h5py",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest-cov"
]
docs = [
    "sphinx",
    "sphinx-material"
]

[project.scripts]
lavello_mlips = "lavello_mlips.cli:main"
download_omol25 = "lavello_mlips.download_omol25:main"
verify_processed_omol25 = "lavello_mlips.verify_processed_omol25:main"
convert_to_lmdb = "lavello_mlips.convert_to_lmdb:main"
plot_train_results = "lavello_mlips.plot_train_results:main"
phonon_bands = "lavello_mlips.phonon_bands:main"






[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing"
